12b-lb-listener.tf
resource "aws_lb_listener" "web_server" {
  load_balancer_arn = aws_lb.web_server.arn
  port              = "80"
  protocol          = "HTTP"

  # what happens to traffic headed toward LB on port 80 
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.web_server.arn
  }
}
